Changelog
=========

0.5 (Unreleased)
----------------

* implement IMicroblogContext acquisition and storage for StatusUpdate [gyst, tdesvenain]
* Simplify API to filter on either user or context, but not on both. Cleanup and restructure implementation [gyst]
* fix testing thread cleanup [gyst]
* reword IMicroblogContext behavior [gyst]
* add a behaviour for IMicroblogContext local microblog support interface [tdesvenain]
* define IMicroblogContext interface as integration hook for local workspaces [gyst]
* fix flake8 errors [gyst]
* implement and integrate context permission checks for local microblog spaces [gyst]
* context filtering by uuid [gyst]
* integration test with actual plone.app.uuid resolving [gyst]
* refactor to (mocked) plone.app.uuid integration [gyst]
* base implementation for context-aware statuscontainer [gyst]


0.4.2 (2013-04-29)
------------------

* Plone 4.3 compatiblity [tdesvenain]

0.4.1 (2012-11-26)
------------------

* update changelog, release [gyst]
* update travis config to new buildout [gyst]
* provide a virtualenv-enabled Travis buildout that can be debugged on a dev box [gyst]
* Added l10n for English and Dutch for plone domain [macagua]
* Updated Spanish l10n [macagua]
* Updated sync i18n script with plone domain, added i18n for portlets, Generic Setup register Profile [macagua]
* Updated changelog contributors files and sync i18n script with plone domain, added i18n for portlets, Generic Setup register Profile [macagua]
* Makefile changes [avelino]
* pep8 and cleanups [avelino]
* pep8/pyflakes [gyst]
* update Travis CI configuration to include pep8/pyflakes testing [hvelarde]
* update location of extended configuration as the plonetest repo was moved to GitHub [hvelarde]
* update list of ignored objects [hvelarde]
* update doc, bump version [gyst]
* cleanup buildout [gyst]
* add Travis CI configuration [hvelarde]


0.4 (2012-10-09)
----------------

* .gitignores [gyst]
* update docs [gyst]
* fix dependency [gyst]